[package]
name = "hash-password-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.5.3"
candid = "0.10"
ic-cdk = "0.18.5"
ic-cdk-timers = "0.12.2" # Feel free to remove this dependency if you don't need timers
hex = "0.4"
bcrypt = "0.15.1"
getrandom = { version = "0.2", features = ["custom"] }
rand = "0.8"
rand_chacha = "0.9"
canbench-rs = { version = "0.2.1", optional = true }